--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -108,16 +108,20 @@
 
 		<h2 id="c">coding</h2>
 
-		<h3 id="coding-help">HTML and CSS tutorials</h3>
+		<h3 id="editor">editors and other programs</h3>
+		<li><a href="https://codepen.io" target="_blank">codepen</a> - online editor with a live preview, lets you save + share codes with an acc. you can see mine <a href="https://codepen.io/doqmeat" target="_blank">here!</a></li>
+		<li><a href="https://notepad-plus-plus.org/" target="_blank">notepad++</a> - offline editor, like notepad but with more stuff!</li>
+		<li><a href="https://brackets.io/" target="_blank">brackets</a> - offline editor, centered around coding HTML, has <a href="https://registry.brackets.io/" target="_blank">extensions</a> support! has an <a href="https://phcode.dev/" target="_blank">online version</a> as well</li>
+		<li><a href="https://code.visualstudio.com/" target="_blank">visual studio code</a> - offline editor, supported by microsoft, it has a TON of extensions and other options in comparison to brackets.</li>
+		<li><a href="https://desktop.github.com/" target="_blank">github desktop</a> - program used to update my website's code directly from my PC without having to open neocities built-in coder using <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities</a>. this is such a time-saver and i really recommend it to everyone who updates their site a lot.</li>
+
+		<h3 id="coding-help">HTML, CSS, and JS tutorials</h3>
 		<li><a href="https://www.w3schools.com" target="_blank">w3schools</a> - besties lets learn how to code! (holy grail)</li>
 		<li><a href="https://developer.mozilla.org/en-US/" target="_blank">developer.mozilla.org</a> - coding tutorials for html, css, etc. (holy grail pt 2)</li>
 		<li><a href="https://internetingishard.netlify.app/" target="_blank">interneting is hard</a> - beginner friendly web dev tutorials!</li>
 		<li><a href="https://solarpunk.cool/zines/web-zine-01/table-of-contents.html" target="_blank">web zine 01</a> - zine about making a website from scratch!</li>
-
-		<h3 id="editor">editors i've used</h3>
-		<li><a href="https://codepen.io" target="_blank">codepen</a> - online editor with a live preview, lets you save + share codes with an acc. you can see mine <a href="https://codepen.io/doqmeat" target="_blank">here!</a></li>
-		<li><a href="https://notepad-plus-plus.org/" target="_blank">notepad++</a> - offline editor, like notepad but with more stuff</li>
-		<li><a href="https://brackets.io/" target="_blank">brackets</a> - offline editor, centered around coding HTML, <a href="https://registry.brackets.io/" target="_blank">extensions</a> support</li>
+		<li><a href="https://javascript.info/" target="_blank">javascript.info</a> - JS tutorials</li>
+		<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" target="_blank">javascriptkit</a> - JS resources and codes</li>
 
 		<h3 id="sites">useful sites</h3>
 
@@ -127,19 +131,17 @@
 		<li><a href="https://html-css-js.com/css/generator/box-shadow/" target="_blank">CSS box shadow generator</a></li>
 		<li><a href="https://cssgradient.io" target="_blank">cssgradient.io</a> - gradient bgs CSS generator</li>
 		<li><a href="https://codebeautify.org/htmlviewer" target="_blank">codebeautify.org</a> - makes your code pretty. you can also minimize your code as well</li>
-		<li><a href="https://www.w3schools.com/cssref/tryit.php?filename=trycss_cursor" target="_blank">W3Schools cursor property</a> - all the cursors you can use with css!</li>
+		<li><a href="https://www.w3schools.com/cssref/tryit.php?filename=trycss_cursor" target="_blank">W3Schools cursor property</a> - all the cursors you can use with CSS!</li>
 		<li><a href="https://bennettfeely.com/clippy/" target="_blank">clippy</a> - CSS clip-path maker</li>
 		<li><a href="https://nekocalc.com/px-to-rem-converter" target="_blank">px-to-rem</a> converter</li>
 		<li><a href="https://pixelsconverter.com/" target="_blank">pixelsconverter</a> - converts px to rem, em, inches, and more!</li>
-		<li><a href="http://www.javascriptkit.com/cutpastejava.shtml" target="_blank">javascriptkit</a> - JS resources and codes</li>
 		<li><a href="https://www.xml-sitemaps.com/" target="_blank">xml-sitemaps</a> - creates a sitemap of your site!</li>
 		<li><a href="https://www.cssportal.com/css-triangle-generator/" target="_blank">CSS triangle generator</a></li>
 		<li><a href="https://nohappynonsense.net/features/reallysimple" target="_blank">simple RSS feed maker</a></li>
 		<li><a href="https://viewportsizer.com/what-is-my-screen-size/">viewportsizer</a> - tells you your browser's screen size!</li>
 
 		<h3 id="tut">tutorials / guides</h3>
-
-		<li><a href="https://github.com/burned-salmon/deploy-to-neocities-template" target="_blank">deploy to neocites</a> from github! easy to follow template by missmoss. more info can be found on <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities.neocities.org</a></li>
+		<li><a href="https://github.com/burned-salmon/deploy-to-neocities-template" target="_blank">deploy to neocites</a> from github! - easy to follow template by missmoss. more info can be found on <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities.neocities.org</a></li>
 		<li>flexbox: <a href="https://solaria.neocities.org/gallerytut" target="_blank">solaria's simple gallery guide</a> / <a href="https://sadgrl.online/learn/articles/using-flexbox" target="_blank">sadgrl's flexbox guide</a></li>
 		<li>border imgs: <a href="https://solaria.neocities.org/bits/" target="_blank">solaria's custom CSS border imgs</a></li>
 		<li><a href="https://bechnokid.neocities.org/resources/tut_statuscafefeed" target="_blank">status.cafe feed reader!</a></li>
