--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -179,12 +179,13 @@
 			<a title="wrender - cuteeee site with lots to see! i like how each page follows a color palette" href="https://wrender.neocities.org/" target="_blank"><img src="!g/wrender.gif" alt="wrender"></a>
 			<a title="ruili - blueee" href="https://ruili.neocities.org/" target="_blank"><img src="!g/ruili.gif" alt="ruili"></a>
 			<a title="lucard - what a lovely site this is looking up to be!! so excited to see the progress" href="https://lucard.neocities.org/" target="_blank"><img src="!g/lucard.png" alt="lucard"></a>
+			<a title="cuteee" href="https://mypillowfort.neocities.org/" target="_blank"><img src="!g/mypillowfort.jpeg" alt="mypillowfort"></a>
 
 		</div>
 
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
-		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> / <a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> / <a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> / <a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> / <a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> / <a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> / <a href="https://vickee.neocities.org" target="_blank">vickee</a>
+		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> / <a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> / <a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> / <a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> / <a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> / <a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> / <a href="https://vickee.neocities.org" target="_blank">vickee</a> / <a title="very minimalistic and nice site!" href="https://10kph.neocities.org/" target="_blank">10kph</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> other cool sites</h3>
@@ -325,6 +326,7 @@
 			<a title="site codes and templates" href="https://templaterr.neocities.org" target="_blank"><img src="/sites/!g/templaterr1.png"></a>
 			<a href="https://strawberry-gashes.neocities.org" title="strawberry gashes ♥" target="0"><img src="/sites/!g/strawberry-gashes.gif"></a>
 			<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif"></a>
+			<a title="cute and colorful site that offers free materials!" href="https://sweetcharm.net/" target="_blank"><img src="!g/sweetcharm.gif" alt="sweetcharm"</a>
 		</div>
 
 		<h3><img src="/!g/pix/icon_k_gyo.gif"> 404 graveyard :(</h3>
