--- a/website/index.html
+++ b/website/index.html
@@ -105,11 +105,12 @@
 		<p>hello there! you're about to enter <span id="rainbow">doqmeat.neocities.org</span> </p>
 
 		<p>this website uses <u>javascript</u> and <u>iframes</u>. on rare occasions there will be <u>autoplay audio</u>, and discussions of <u>heavy topics</u>. there will be warnings for the latter.</p>
-		<p class="hide"><b>it is not compatible with mobile devices</b>, sorry!</p>
+		<p class="hide"><b>homepage is compatible with mobile devices but i cannot guarantee that for every page on my site, sorry!</b></p>
 		<p>this is a personal website made for my own enjoyment. with that said, have fun browsing!</p>
+		<p>contact me @ <a href="mailto:doqmeat@gmail.com">doqmeat@gmail.com</a></p>
 	</main>
 
-<!--
+	<!--
 	<div id="cat">
 		<a title="shhhhhh he's sleeping! but you can still come in :)" href="/home.html" style="background:transparent"><img src="https://doqmeat.neocities.org/!g/deco/sleeping-cat.gif" alt="picture of a cat sleeping that links to homepage"></a>
 	</div>
