CSS fixes to recaps

--- a/website/music/recaps/2022.html
+++ b/website/music/recaps/2022.html
@@ -8,7 +8,6 @@
 	<title>2022 recap</title>
 	<link rel="icon" type="image/x-icon" href="/music/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="/music/body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 
 	<!-- tooltip shit -->
@@ -34,15 +33,14 @@
 			background-size: cover;
 		}
 
-		h1,
-		h2,
-		h4 {
-			background: rgb(255, 255, 255);
-			background: linear-gradient(167deg, rgba(255, 255, 255, 1) 0%, rgba(139, 188, 221, 1) 52%, rgba(95, 123, 198, 1) 100%);
-			-webkit-background-clip: text;
-			-webkit-text-fill-color: transparent;
-			-webkit-text-stroke-width: 1px;
-			-webkit-text-stroke-color: black;
+		:root {
+			--gradient1: rgb(255, 255, 255);
+			--gradient2: linear-gradient(167deg, rgba(255, 255, 255, 1) 0%, rgba(139, 188, 221, 1) 52%, rgba(95, 123, 198, 1) 100%);
+			--dark: #272638;
+			--light: #F6E8CB;
+			--1: #687A93;
+			--2: #90CDF4;
+			--3: #90CDF4;
 		}
 
 	</style>
