--- a/website/music/fav-albums.html
+++ b/website/music/fav-albums.html
@@ -168,7 +168,7 @@ https://www.w3schools.com/howto/howto_js_filter_elements.asp
 					<p>i used to have <i>habitual crush</i> and <i>friend</i> on repeat in middle school while i was going through something a bit gay. you know how it is</p>
 
 					<p><b>fav songs:</b> tsuki no koibumi 2 <img src="/!g/pix/staryellow.gif"> habitual crush <img src="/!g/pix/staryellow.gif"> aria economy <img src="/!g/pix/staryellow.gif"> friend <img src="/!g/pix/staryellow.gif"> kompass <img src="/!g/pix/staryellow.gif"> divide by four add seven</p>
-					<p><b>links:</b> <a href="https://c418.bandcamp.com/album/148" target="_blank">bandcamp</a> / spotify / youtube</p>
+					<p><b>links:</b> <a href="https://c418.bandcamp.com/album/148" target="_blank">bandcamp</a> / <a href="https://open.spotify.com/album/47rrhji1V9rRBgYIDCWgQJ?si=4Ttgl9nERn-7PuPS4JX9SQ" target="_blank">spotify</a> / <a href="https://youtube.com/playlist?list=OLAK5uy_n8cH2ZfM5FpdhHFDCPeC8xmkQeJd01oWQ&si=6yqaSs-XoqVczKTV" target="_blank">youtube playlist</a></p>
 				</div>
 			</div>
 
