--- a/website/art/index.html
+++ b/website/art/index.html
@@ -43,14 +43,14 @@ coded with love by des
 <body>
 	<h1>arts &amp; crafts</h1>
 	<p>a page dedicated to the stuff i've made. idk what's up with me but i only have energy to draw like once per year.</p>
-	<p><small>really hated my previous version of this page DDLFKJF i will eventually upload more stuff to it + CSS but for now this will do. on my to-do list for this page: i wanna figure out how can i make an img pop up as a tooltip... but that's for another time</small></p>
+	<p><small>really hated my previous version of this page DDLFKJF i will eventually upload more stuff to it + CSS but for now this will do. on my to-do list for this page: i wanna figure out how can i make an img pop up as a tooltip... but that's for another time. also add ALT text to art.</small></p>
 
 	<h2>posts</h2>
 	<p><a href="post/depression-cherry-booklet.html">depression cherry custom booklet</a></p>
 
 	<h2>arts</h2>
 	<img src="!g/drawings/halo2.jpg" class="full">
-		<img src="!g/drawings/halotransp.png" class="half">
+	<img src="!g/drawings/halotransp.png" class="half">
 	<img src="!g/drawings/sepiarecord.jpg" class="half">
 	<img src="!g/drawings/oyasumi.jpg" class="half">
 	<img src="!g/drawings/thelittleprincejrn.jpg" class="half">
