--- a/website/home.html
+++ b/website/home.html
@@ -49,6 +49,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<a title="the webmaster and site!" href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
 			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
 			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
+			<a href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts</a>
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
 			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
@@ -120,7 +121,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
-			<li>18.dec.23 - <a href="journal/2023/12.html#18">journal log</a>:  university admission accepted!</li>
+			<li>21.dec.23 - reworking <a title="still a WIP but it's better than nothing" href="/art">art</a> page</li>
+			<li>18.dec.23 - <a href="journal/2023/12.html#18">journal log</a>: university admission accepted!</li>
 			<li>14.dec.23 - doqmeat homepage v3 is now live! + <a href="/music/listening-log/2023/12.html#3">listening log</a> + <a href="/notebook/archive/homepage/index.html">homepage archive</a> :) rest well v2 + changed up <a href="/">landing</a> as well!</li>
 			<li>11.dec.23 - <a href="/vgs">gaming log</a> + new featured cat <img src="/!g/pix/cat-tail.gif" alt=""></li>
 			<li>08.dec.23 - <a href="/journal">journal log</a> + <a title="i bought more stamps and got a notebook of tomie depaola ones. they're very cute!" href="/collection/mail-stamps">mail stamp</a> + <a title="added scans for yeule's serotonin II" href="/music/cds">CDs</a></li>
