updated button wall + minor fixes

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -180,7 +180,7 @@
 			<a title="ruili - blueee" href="https://ruili.neocities.org/" target="_blank"><img src="!g/ruili.gif" alt="ruili"></a>
 			<a title="lucard - what a lovely site this is looking up to be!! so excited to see the progress" href="https://lucard.neocities.org/" target="_blank"><img src="!g/lucard.png" alt="lucard"></a>
 			<a title="cuteee" href="https://mypillowfort.neocities.org/" target="_blank"><img src="!g/mypillowfort.jpeg" alt="mypillowfort"></a>
-
+			<a title="awesome little site who's youtube channel is very charming to watch! also love the webmaster's cat!" href="https://marcika.club/" target="_blank"><img src="!g/marcika.club.gif" alt="marcika.club"></a>
 		</div>
 
 
@@ -247,11 +247,12 @@
 			<a href="https://vashti.neocities.org" target="_blank"><img src="!g/vashti.png"></a>
 			<a href="https://www.snifflebear.moe/p/welcome.html" target="_blank"><img src="!g/snifflebear.png" alt="snifflebear.moe"></a>
 			<a href="https://ribo.zone/" target="_blank"><img src="!g/ribose.gif" alt="ribo.zone"></a>
-			<a href="https://marcika.club/" target="_blank"><img src="!g/marcika.club.gif" alt="marcika.club"></a>
 			<a title="such a cute site with lots of personality" href="https://eggsandmint.neocities.org" target="_blank"><img src="!g/eggsandmint.png" alt="eggsandmint"></a>
+			<a title="i love their oc" href="https://churupan.neocities.org/" target="_blank"><img src="!g/churupan.gif" alt="churupan"></a>
 		</div>
+		<a href="mewmiu.blog.fc2.com"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
 
-		<p><a href="https://neustadt.fr/">neustadt.fr</a></p>
+		<p><a href="https://neustadt.fr/">neustadt.fr</a> / <a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a></p>
 
 		<h4>for fun!</h4>
 		<div class="neo">
@@ -326,7 +327,7 @@
 			<a title="site codes and templates" href="https://templaterr.neocities.org" target="_blank"><img src="/sites/!g/templaterr1.png"></a>
 			<a href="https://strawberry-gashes.neocities.org" title="strawberry gashes ♥" target="0"><img src="/sites/!g/strawberry-gashes.gif"></a>
 			<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif"></a>
-			<a title="cute and colorful site that offers free materials!" href="https://sweetcharm.net/" target="_blank"><img src="!g/sweetcharm.gif" alt="sweetcharm"</a>
+			<a title="cute and colorful site that offers free materials!" href="https://sweetcharm.net/" target="_blank"><img src="!g/sweetcharm.gif" alt="sweetcharm"></a>
 		</div>
 
 		<h3><img src="/!g/pix/icon_k_gyo.gif"> 404 graveyard :(</h3>
