added fc2 microblog link to homepage

--- a/website/home.html
+++ b/website/home.html
@@ -69,6 +69,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<a href="/sitemap"><img src="/!g/pix/world.gif"> sitemap</a>
 
 			<h3>offsite</h3>
+    <a title="even MORE of my thoughts" href="https://doqmeat.blog.fc2.com"><img src="/!g/pix/msgbbl.gif" alt=""> microblog</a>
 			<a href="https://doqmeat.123guestbook.com/"><img src="/!g/pix/heart-paper.gif"> guestbook</a>
 			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/catheadswing.gif"> neocities
 				profile</a>
