--- a/website/about/index.html
+++ b/website/about/index.html
@@ -267,13 +267,10 @@ https://stackoverflow.com/questions/14695933/draggable-div-with-classname
 				<img src="/!g/pix/buttermeadow.gif" style="position:absolute;bottom:20px;right:20px;pointer-events:none;width:55px;">
 				<a title="e-mail" href="mailto:doqmeat@gmail.com"><img src="/!g/pix/mail11a.gif" align="left" style="margin-right:15px;margin-top:5px;margin-left:10px;"></a>
 				<li><a href="https://github.com/doqmeat" target="_blank">github</a></li>
-				<li><a href="https://twitter.com/sepiarecord999" target="_blank">twitter</a></li>
-				<li><a href="https://twitter.com/hourlysiinamota" target="_blank">siinamota song bot</a></li>
-				<li><a href="https://bsky.app/profile/doqmeat.neocities.org" target="_blank">bluesky</a></li>
-				<li><a href="https://doqmeats.tumblr.com/" target="_blank">tumblr</a></li>
 				<li><a href="https://codepen.io/doqmeat" target="_blank">codepen</a></li>
+				<li><a href="https://doqmeat.blog.fc2.com/" target="_blank">FC2 blog</a></li>
+				<li><a href="https://rateyourmusic.com/~doqmeat" target="_blank">RYM</a></li>
 				<li><a href="https://letterboxd.com/Iakitu/" target="_blank">letterboxd</a></li>
-				<li><a href="https://rateyourmusic.com/~doqmeat" target="_blank">rateyourmusic</a></li>
 				<li><a href="https://www.last.fm/user/lakiitu" target="_blank">last.fm</a></li>
 				<li><a href="https://ko-fi.com/doqmeat" target="_blank">ko-fi</a></li>
 			</div>
