--- a/website/journal/credit.html
+++ b/website/journal/credit.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-	<h1>journal credits</h1>
+	<h1 style="margin: 20px 25px;">journal credits</h1>
 	<p><a href="https://pastebin.com/PiDgrv3J" target="_blank">music player</a> code is by <a href="https://adilene.net/" target="_blank">adilene.net</a></p>
+	<p>pixels by <a href="http://whimsical.heartette.net" target="_blank">whimsical</a></p>
 	<p>gif on right side from hit video game/visual novel <i>if found...</i> / <a href="https://store.steampowered.com/app/1041920/If_Found/" target="_blank">steam page</a></p>
 	<p>washi tape, blank bookmark from <a href="https://foollovers.com/" target="_blank">foollovers.com</a></p>
 	<p>calendar iframe from <a href="http://calendar-muryou.com/blog.html" target="_blank">calendar-muryou</a></p>
