--- a/website/home.html
+++ b/website/home.html
@@ -69,7 +69,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<a href="/sitemap"><img src="/!g/pix/world.gif"> sitemap</a>
 
 			<h3>offsite</h3>
-    <a title="even MORE of my thoughts" href="https://doqmeat.blog.fc2.com"><img src="/!g/pix/msgbbl.gif" alt=""> microblog</a>
+			<a title="hosted on FC2" href="https://doqmeat.blog.fc2.com"><img src="/!g/pix/msgbbl.gif" alt=""> microblog</a>
 			<a href="https://doqmeat.123guestbook.com/"><img src="/!g/pix/heart-paper.gif"> guestbook</a>
 			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/catheadswing.gif"> neocities
 				profile</a>
@@ -122,6 +122,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>22.dec.23 - <a href="/journal">journal log</a></li>
 			<li>21.dec.23 - reworking <a title="still a WIP but it's better than nothing" href="/art">art</a> page</li>
 			<li>18.dec.23 - <a href="journal/2023/12.html#18">journal log</a>: university admission accepted!</li>
 			<li>14.dec.23 - doqmeat homepage v3 is now live! + <a href="/music/listening-log/2023/12.html#3">listening log</a> + <a href="/notebook/archive/homepage/index.html">homepage archive</a> :) rest well v2 + changed up <a href="/">landing</a> as well!</li>
