--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -54,7 +54,7 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 			<h1>des' notepad</h1>
 			<img src="/!g/deco/diary.gif">
 			<br>
-			a collection of random thoughts that i have throughout my days. it's a mix of web dev stuff and my personal life.
+			<span style="padding: 4px;">a collection of my personal entries and site updates!</span>
 			<br>
 			<img src="/!g/deco/pencil1.gif">
 			<br>
