--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -183,9 +183,8 @@
 			<a title="awesome little site who's youtube channel is very charming to watch! also love the webmaster's cat!" href="https://marcika.club/" target="_blank"><img src="!g/marcika.club.gif" alt="marcika.club"></a>
 		</div>
 
-
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
-		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> / <a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> / <a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> / <a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> / <a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> / <a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> / <a href="https://vickee.neocities.org" target="_blank">vickee</a> / <a title="very minimalistic and nice site!" href="https://10kph.neocities.org/" target="_blank">10kph</a>
+		<p><a href="https://44caliber.net/" target="_blank">44caliber.net</a> / <a href="https://neet-elite.net/" target="_blank">neet-elite.net</a> / <a href="https://dogsprite.neocities.org/" target="_blank">dogsprite</a> / <a href="https://pelagiczones.neocities.org/" target="_blank">pelagiczones</a> / <a href="https://bubbly.neocities.org/" target="_blank">bubbly</a> / <a href="https://gougou772.neocities.org/" target="_blank">gougou772</a> / <a href="https://vickee.neocities.org" target="_blank">vickee</a> / <a title="very minimalistic and nice site!" href="https://10kph.neocities.org/" target="_blank">10kph</a> / <a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a>
 		</p>
 
 		<h3><img src="/!g/pix/icon_k_clover1.gif"> other cool sites</h3>
@@ -250,9 +249,9 @@
 			<a title="such a cute site with lots of personality" href="https://eggsandmint.neocities.org" target="_blank"><img src="!g/eggsandmint.png" alt="eggsandmint"></a>
 			<a title="i love their oc" href="https://churupan.neocities.org/" target="_blank"><img src="!g/churupan.gif" alt="churupan"></a>
 		</div>
-		<a href="mewmiu.blog.fc2.com"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
+		<a href="https://mewmiu.blog.fc2.com"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
 
-		<p><a href="https://neustadt.fr/">neustadt.fr</a> / <a title="one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/">2cherrish</a></p>
+		<p><a href="https://neustadt.fr/">neustadt.fr</a></p>
 
 		<h4>for fun!</h4>
 		<div class="neo">
@@ -328,6 +327,7 @@
 			<a href="https://strawberry-gashes.neocities.org" title="strawberry gashes ♥" target="0"><img src="/sites/!g/strawberry-gashes.gif"></a>
 			<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif"></a>
 			<a title="cute and colorful site that offers free materials!" href="https://sweetcharm.net/" target="_blank"><img src="!g/sweetcharm.gif" alt="sweetcharm"></a>
+			<a title="has cute CAT themed FC2 blog templates, materials, and lots more! they also have linked other resource sites!" href="http://tora7.ciao.jp/" target="_blank"><img src="!g/tora7.gif" alt="tora7"></a>
 		</div>
 
 		<h3><img src="/!g/pix/icon_k_gyo.gif"> 404 graveyard :(</h3>
