--- a/website/home.html
+++ b/website/home.html
@@ -47,33 +47,35 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<a href="/"><img src="/!g/pix/rainbow1.gif" alt=""> landing page</a>
 			<h3>personal</h3>
 			<a title="the webmaster and site!" href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
-			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
-			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
-			<a href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts</a>
+			<a title="personal entries and site talk!" href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
+			<a title="rambling mode where i put in the effort to be as coherent as possible" href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
+			<a title="nonsense. mostly shorter entries" href="https://doqmeat.blog.fc2.com" class="outlink"><img src="/!g/pix/tora-clover.gif" alt=""> microblog</a>
+			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts</a>
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
 			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> gaming log</a>
-			<a href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
-			<a href="/music/listening-log/2023/12.html"><img src="/!g/pix/cat-music.gif" alt=""> listening log</a>
+			<a title="everything about the music i love is here!" href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
+			<a title="this month's listening log" href="/music/listening-log/2023/12.html"><img src="/!g/pix/cat-music.gif" alt=""> listening log</a>
 
 			<h3>misc</h3>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
 			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movie log</a>
 			<a title="a digital place where i come to relax with mental health resources" href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
+			<a href="webgarden/greenhouse.html"><img src="/!g/pix/home.gif"> webgarden</a>
 
 			<h3>site</h3>
 			<a href="/sites"><img src="/!g/pix/favcharas.gif"> button wall</a>
-			<a href="webgarden/greenhouse.html"><img src="/!g/pix/home.gif"> webgarden</a>
 			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"><img src="/!g/pix/notebook.gif"> notebook</a>
+			<a href="https://doqmeat.123guestbook.com/" class="outlink"><img src="/!g/pix/heart-paper.gif"> guestbook</a>
+			<a href="https://my.cbox.ws/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/msgbbl.gif"> chatbox</a>
 			<a href="/sitemap"><img src="/!g/pix/world.gif"> sitemap</a>
 
+
 			<h3>offsite</h3>
-			<a title="hosted on FC2" href="https://doqmeat.blog.fc2.com"><img src="/!g/pix/msgbbl.gif" alt=""> microblog</a>
-			<a href="https://doqmeat.123guestbook.com/"><img src="/!g/pix/heart-paper.gif"> guestbook</a>
 			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/catheadswing.gif"> neocities
 				profile</a>
-			<a title="the site's repository!" href="https://github.com/doqmeat/doqmeat.neocities.org" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> github code</a>
+			<a title="the site's repository!" href="https://github.com/doqmeat/doqmeat.neocities.org" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> github</a>
 			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img src="/!g/pix/mail-sozaiya.gif" alt=""> e-mail</a>
 		</nav>
 
