--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -23,8 +23,8 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
 	<script>
-		(function ($) {
-			$(document).ready(function () {
+		(function($) {
+			$(document).ready(function() {
 				$("[title]").style_my_tooltips({
 					tip_follows_cursor: true,
 					tip_delay_time: 10,
@@ -54,7 +54,7 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 			<h1>des' notepad</h1>
 			<img src="/!g/deco/diary.gif">
 			<br>
-			<span style="padding: 4px;">a collection of my personal entries and site updates!</span>
+			<span style="padding: 4px;">a place where i talk about what's going on in my life and about my site!</span>
 			<br>
 			<img src="/!g/deco/pencil1.gif">
 			<br>
