--- a/website/index.html
+++ b/website/index.html
@@ -107,7 +107,6 @@
 		<p>this website uses <u>javascript</u> and <u>iframes</u>. on rare occasions there will be <u>autoplay audio</u>, and discussions of <u>heavy topics</u>. there will be warnings for the latter.</p>
 		<p class="hide"><b>homepage is compatible with mobile devices but i cannot guarantee that for every page on my site, sorry!</b></p>
 		<p>this is a personal website made for my own enjoyment. with that said, have fun browsing!</p>
-		<p>contact me @ <a href="mailto:doqmeat@gmail.com">doqmeat@gmail.com</a></p>
 	</main>
 
 	<!--
@@ -131,7 +130,7 @@
 			</div>
 
 			<!-- mob psycho 100 / mp100 webring -->
-			<div id='mobring' style="margin:5px;">
+			<div id='mobring' style="width:200px;">
 				<script type="text/javascript" src="https://sugarforbrains.neocities.org/mobring/onionring-variables.js"></script>
 				<script type="text/javascript" src="https://sugarforbrains.neocities.org/mobring/basic-widget.js"></script>
 			</div>
