--- a/website/notebook/sitely/to-dos.html
+++ b/website/notebook/sitely/to-dos.html
@@ -39,10 +39,13 @@
 			bullet list check imgs by <a class="outlink" href="https://sleepysprout.neocities.org/index1" target="_blank">sleepysprout</a>
 		</p>
 
+		<h3>bugs</h3>
+		<li class="dot">journal iframe not appearing on some viewports? / <a href="https://github.com/doqmeat/doqmeat.neocities.org/issues/4" target="_blank" class="outlink">github issue</a></li>
+
 		<h3>personal</h3>
 		<ul>
 			<li class="no">fashion index - my fav pieces of my closet and things i want</li>
-			<li class="no">art index v3 - make thumbnails so page loads in one go, resize imgs, be able to sort my art by tags and year</li>
+			<li class="no">art index v3 - resize imgs, be able to sort my art by tags and year <small>(23.dec.23 edit: i made a plain version of my art page, but it will get a rehaul once i can start working on it)</small></li>
 			<li class="no">art inspiration</li>
 			<li class="no">digital scrapbook - inspired by <a href="https://strawberry-gashes.neocities.org/sb23" target="_blank">strawberry-gashes</a> and <a href="https://bisuko.neocities.org/scrapbooks/2023" target="_blank">bisuko</a>! these would be pages where i write highlights of each year!</li>
 			<li class="no">journals and planners blog post</li>
@@ -107,6 +110,7 @@
 		<h3>other</h3>
 		<ul>
 			<li class="no">revamp <a href="https://status.cafe/users/doqmeat" target="_blank">status.cafe</a> CSS</li>
+			<li class="no">make <a href="https://doqmeat.blog.fc2.com" target="_blank">FC2 microblog</a> template responsive</li>
 			<li class="no">re-do <a href="/webgarden/greenhouse.html" target="_blank">webgarden pot</a></li>
 			<li class="no">update counter imgs</li>
 			<li class="no">webmentions? </li>
