--- a/website/notebook/sitely/graphics.html
+++ b/website/notebook/sitely/graphics.html
@@ -127,6 +127,7 @@
 		<img src="/!g/deco/catrain.gif">
 		<img src="/!g/deco/catblep.gif">
 		<img src="/!g/deco/catbox.gif">
+		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/deco/tora-cat%20(1).gif"></a>
 
 
 		<h3 id="other-emo">other emoticons</h3>
@@ -348,6 +349,8 @@
 		<img src="/!g/pix/cam.png">
 		<img src="/!g/deco/koinuko-kittytiny.gif">
 		<img src="/!g/deco/hk-p.gif">
+		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/pix/tora-cat-holdingsunflower.gif"></a>
+		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/pix/tora-cat-holdingflower.gif"></a>
 
 		<!-- sozaiya405 bears -->
 		<br>
@@ -466,19 +469,23 @@
 		<h2 id="stickers">big pixels / stickers</h2>
 
 		<h3 id="cats">cats</h3>
-		<img src="/!g/deco/df04-halloween-cat.gif">
+		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/deco/tora-cat%20(2).gif"></a>
+		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/deco/tora-cat%20(3).gif"></a>
+		<a href="http://tora7.ciao.jp/" target="_blank"><img src="/!g/deco/tora-cat-peek.gif"></a>
 		<img src="/!g/deco/cat%20471.gif">
+		<img src="/!g/deco/cat%20358.gif">
+		<img src="/!g/deco/cat%20367.gif">
+		<img src="/!g/deco/cat%20380.gif">
+		<br> these ones are from <a href="https://foollovers.com/" target="_blank">foollovers!</a> &rarr;
+		<img src="/!g/deco/df04-halloween-cat.gif">
+		<img src="/!g/deco/hf01-halloween-cat.gif">
 		<img src="/!g/deco/df14-halloween-cat.gif">
+		<img src="/!g/deco/p13-icon-cat.gif">
 		<img src="/!g/deco/eh01-icon-cat.gif">
 		<img src="/!g/deco/g02-icon-cat.gif">
-		<img src="/!g/deco/hf01-halloween-cat.gif">
 		<img src="/!g/deco/hf01-icon-cat.gif">
 		<img src="/!g/deco/kba08-icon-cat.gif">
 		<img src="/!g/deco/kba10-icon-cat.gif">
-		<img src="/!g/deco/cat%20358.gif">
-		<img src="/!g/deco/p13-icon-cat.gif">
-		<img src="/!g/deco/cat%20367.gif">
-		<img src="/!g/deco/cat%20380.gif">
 		<br>
 		<img src="/!g/deco/catrock.gif">
 		<img src="/!g/pix/sleepycat.gif">
