--- a/website/home.html
+++ b/website/home.html
@@ -28,6 +28,13 @@ feel free to look around :) just don't be THAT person and take the entire code f
 </head>
 
 <body>
+	<script>
+		NekoType = "black"
+
+	</script>
+	<h1 id=nl>
+		<script src="https://webneko.net/n20171213.js"></script><a href="https://webneko.net">Neko</a>
+	</h1>
 
 	<div id="wrapper">
 
@@ -185,6 +192,17 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="webrings" class="box">
 			<h2>webrings &amp; widgets</h2>
+
+			<!--		WEB GUARDIAN -->
+			<div class="results" style="width: 200px;background-color: #fff;color: #000;padding: 10px;border: 1px solid;margin: 0 auto;font-size: '15pt';">
+				<p style="margin: 0">This page is protected by a</p>
+				<h2 class="title" style="margin: 0">OWL</h2>
+				<img class="image" style="max-width: 160px;border: 1px solid" alt="OWL" src="https://i.ibb.co/MSGxtwm/owl.jpg">
+				<p class="description">A group of owls is called a parliament.</p>
+				<small>
+					<a href="https://hekate.neocities.org">Want your own? Visit hekate.neocities.org!</a>
+				</small>
+			</div>
 
 			<!-- neo creatives -->
 			<div id="ncring">
