--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -138,7 +138,8 @@
 		<li><a href="https://www.xml-sitemaps.com/" target="_blank">xml-sitemaps</a> - creates a sitemap of your site!</li>
 		<li><a href="https://www.cssportal.com/css-triangle-generator/" target="_blank">CSS triangle generator</a></li>
 		<li><a href="https://nohappynonsense.net/features/reallysimple" target="_blank">simple RSS feed maker</a></li>
-		<li><a href="https://viewportsizer.com/what-is-my-screen-size/">viewportsizer</a> - tells you your browser's screen size!</li>
+		<li><a href="https://viewportsizer.com/what-is-my-screen-size/" target="_blank">viewportsizer</a> - tells you your browser's screen size!</li>
+		<li><a href="https://www.htmlsymbols.xyz" target="_blank">HTML symbol codes</a></li>
 
 		<h3 id="tut">tutorials / guides</h3>
 		<li><a href="https://github.com/burned-salmon/deploy-to-neocities-template" target="_blank">deploy to neocites</a> from github! - easy to follow template by missmoss. more info can be found on <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities.neocities.org</a></li>
