--- a/website/collection/internet-stamps/index.html
+++ b/website/collection/internet-stamps/index.html
@@ -232,6 +232,7 @@ https://coolors.co/ffd3d3-58bc55-ff7e7e-ffea86
 			<img src="!g/neo.jpg">
 			<img src="!g/cherry.gif">
 			<img src="!g/hostedneo.gif">
+			<img src="!g/nagisa.gif">
 			<img src="!g/youcantoo!.gif">
 			<img src="!g/nft.gif">
 			<img src="!g/guestbook.gif">
