button wall update

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -127,10 +127,9 @@
 			<a title="shiraru" href="https://shiraru.neocities.org/" target="_blank"><img src="!g/shiraru.PNG"></a>
 			<a title="lana - a personal site that is in portuguese but that won't stop me from enjoying it!! i can somewhat read it a lil bit but either way i just love how this site looks! and the stuff they write (despite me using a translator) is very interesting!" href="https://porce-lana.blogspot.com/" target="_blank"><img src="!g/porcelana.png"></a>
 			<a title="eyes emoji" href="https://the0bserver.neocities.org/" target="_blank"><img src="!g/the0bserver.png" alt="the0bserver"></a>
-			<a title="lostletters" href="https://lostletters.neocities.org" target="_blank"><img src="!g/lostletters.gif"></a>
+			<a title="lostletters - lovely site and very accessible!" href="https://lostletters.neocities.org" target="_blank"><img src="!g/lostletters.gif"></a>
 			<a title="soupie" href="https://soupie.neocities.org" target="_blank"><img src="!g/soupie.png"></a>
 			<a title="luna" href="https://pixelmoondust.neocities.org/" target="_blank"><img src="!g/pixelmoondust.gif"></a>
-			<a title="izzy" href="https://bunhub.neocities.org/" target="_blank"><img src="!g/bunhub.gif"></a>
 			<a title="solaria - features very helpful guides including accessibility ones + rainbows!!" href="https://solaria.neocities.org" target="_blank"><img src="!g/solaria.gif"></a>
 			<a title="trinity" href="https://trinityexe.neocities.org/" target="_blank"><img src="!g/trinityexe.gif"></a>
 			<a title="joisu" href="https://twicethepixels.neocities.org/" target="_blank"><img src="https://twicethepixels.neocities.org/site_images/TwiceThePixels-AniBanner-88x31-Hamtaro.gif"></a>
@@ -180,7 +179,8 @@
 			<a title="ruili - blueee" href="https://ruili.neocities.org/" target="_blank"><img src="!g/ruili.gif" alt="ruili"></a>
 			<a title="lucard - what a lovely site this is looking up to be!! so excited to see the progress" href="https://lucard.neocities.org/" target="_blank"><img src="!g/lucard.png" alt="lucard"></a>
 			<a title="cuteee" href="https://mypillowfort.neocities.org/" target="_blank"><img src="!g/mypillowfort.jpeg" alt="mypillowfort"></a>
-			<a title="awesome little site who's youtube channel is very charming to watch! also love the webmaster's cat!" href="https://marcika.club/" target="_blank"><img src="!g/marcika.club.gif" alt="marcika.club"></a>
+			<a title="marcika - awesome little site who's youtube channel is very charming to watch! also love the webmaster's cat!" href="https://marcika.club/" target="_blank"><img src="!g/marcika.club.gif" alt="marcika.club"></a>
+			<a title="pp - i love their oc" href="https://churupan.neocities.org/" target="_blank"><img src="!g/churupan.gif" alt="churupan"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
@@ -247,26 +247,12 @@
 			<a href="https://www.snifflebear.moe/p/welcome.html" target="_blank"><img src="!g/snifflebear.png" alt="snifflebear.moe"></a>
 			<a href="https://ribo.zone/" target="_blank"><img src="!g/ribose.gif" alt="ribo.zone"></a>
 			<a title="such a cute site with lots of personality" href="https://eggsandmint.neocities.org" target="_blank"><img src="!g/eggsandmint.png" alt="eggsandmint"></a>
-			<a title="i love their oc" href="https://churupan.neocities.org/" target="_blank"><img src="!g/churupan.gif" alt="churupan"></a>
 		</div>
 		<a href="https://mewmiu.blog.fc2.com"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
 
 		<p><a href="https://neustadt.fr/">neustadt.fr</a></p>
 
-		<h4>for fun!</h4>
-		<div class="neo">
-			<a href="https://adilene.net" target="_blank"><img src="!g/adilene.net.png"></a>
-			<a href="https://momg.neocities.org" target="_blank"><img src="!g/momg.gif"></a>
-			<a title="hallowdaze" href="https://hallowdaze.neocities.org/" target="_blank"><img src="!g/hallowdaze.gif"></a>
-			<a title="space bar" href="https://space-bar.neocities.org" target="_blank"><img src="!g/space-bar.jpg"></a>
-			<a title="japanese postcard shop site! has a ton of beautiful illustrations by different artists" href="https://wadouraku.co.jp" target="_blank"><img src="!g/wadouraku.gif"></a>
-		</div>
-
-		<div class="banner">
-			<a title="pucci's world - a site dedicated to the webmaster's cats! so cute" href="https://puccisworld.neocities.org/" target="_blank"><img src="!g/pucci.gif"></a>
-		</div>
-
-		<h4>art / music</h4>
+		<h4 id="art">art / music</h4>
 		<div class="neo">
 			<a title="bye2 - breakbeat artist" href="https://bye2.co.uk/" target="_blank"><img src="!g/bye2.png"></a>
 			<a href="https://arunyi.art" target="_blank"><img src="!g/arunyi.gif"></a>
@@ -282,9 +268,10 @@
 		<div class="banner">
 			<a title="meisa - japanese artists that has worked with one of my fav vocaloid producers: siinamota!" href="http://hathune39.web.fc2.com/" target="_blank"><img src="!g/hathune.gif"></a>
 			<a title="Tokucina / 彩音ちな - gorgeous oil pastel art! one of my many art inspirations" href="http://tokeisou.client.jp/" target="_blank"><img src="!g/tokeisou.client.jp.jpg"></a>
+			<a title="futureisfailed / erbatur - electronic artist i like!" href="http://erbatur.web.fc2.com/" target="_blank"><img src="!g/erbatur.gif" alt="erbatur"></a>
 		</div>
 
-		<h4>social</h4>
+		<h4 id="social">social</h4>
 		<div id="forums" class="neo">
 			<a title="cinni's social site!" href="https://angel-town.cinni.net" target="_blank"><img src="!g/angel-town.gif"></a>
 			<a title="drawing site by cinni.net" href="https://oekaki.cinni.net" target="_blank"><img src="!g/cinnisoekaki.gif"></a>
@@ -293,7 +280,7 @@
 			<a title="32.bit cafe" href="https://www.32bit.cafe/" target="_blank"><img src="!g/32bit-cafe.png" alt="32.bit cafe"></a>
 		</div>
 
-		<h4>resources</h4>
+		<h4 id="resources">resources</h4>
 		<div id="resources" class="neo">
 			<a title="has an INSANE library of free and CUTE stuff you can use on your site! from bgs, pixels, bullets, layouts, etc!" href="https://foollovers.com" target="_blank"><img src="!g/foolloversbanner.gif"></a>
 			<a title="an archive by cinni where they archive old websites! very good for finding previously lost graphics!" href="https://archive.cinni.net/index.php" target="_blank"><img src="!g/cutiearchive.gif"></a>
@@ -328,6 +315,19 @@
 			<a title="archived site - cute pixel sets" href="https://web.archive.org/web/20021030170809/http://graphicgard.topcities.com/Hydrangea.html"><img src="/sites/!g/hydrangea-topcities.gif"></a>
 			<a title="cute and colorful site that offers free materials!" href="https://sweetcharm.net/" target="_blank"><img src="!g/sweetcharm.gif" alt="sweetcharm"></a>
 			<a title="has cute CAT themed FC2 blog templates, materials, and lots more! they also have linked other resource sites!" href="http://tora7.ciao.jp/" target="_blank"><img src="!g/tora7.gif" alt="tora7"></a>
+		</div>
+
+		<h4 id="fun">for fun!</h4>
+		<div class="neo">
+			<a href="https://adilene.net" target="_blank"><img src="!g/adilene.net.png"></a>
+			<a href="https://momg.neocities.org" target="_blank"><img src="!g/momg.gif"></a>
+			<a title="hallowdaze" href="https://hallowdaze.neocities.org/" target="_blank"><img src="!g/hallowdaze.gif"></a>
+			<a title="space bar" href="https://space-bar.neocities.org" target="_blank"><img src="!g/space-bar.jpg"></a>
+			<a title="japanese postcard shop site! has a ton of beautiful illustrations by different artists" href="https://wadouraku.co.jp" target="_blank"><img src="!g/wadouraku.gif"></a>
+		</div>
+
+		<div class="banner">
+			<a title="pucci's world - a site dedicated to the webmaster's cats! so cute" href="https://puccisworld.neocities.org/" target="_blank"><img src="!g/pucci.gif"></a>
 		</div>
 
 		<h3><img src="/!g/pix/icon_k_gyo.gif"> 404 graveyard :(</h3>
