--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -140,6 +140,7 @@
 		<li><a href="https://nohappynonsense.net/features/reallysimple" target="_blank">simple RSS feed maker</a></li>
 		<li><a href="https://viewportsizer.com/what-is-my-screen-size/" target="_blank">viewportsizer</a> - tells you your browser's screen size!</li>
 		<li><a href="https://www.htmlsymbols.xyz" target="_blank">HTML symbol codes</a></li>
+		<li><a href="https://codepen.io/stephenpaton-tech/full/JjRvGmY" target="_blank">custom scrollbar maker</a></li>
 
 		<h3 id="tut">tutorials / guides</h3>
 		<li><a href="https://github.com/burned-salmon/deploy-to-neocities-template" target="_blank">deploy to neocites</a> from github! - easy to follow template by missmoss. more info can be found on <a href="https://deploy-to-neocities.neocities.org/" target="_blank">deploy-to-neocities.neocities.org</a></li>
