music recaps update

--- a/website/music/index.html
+++ b/website/music/index.html
@@ -29,7 +29,7 @@
 		</header>
 		<div id="scroll">
 			<marquee behavior="scroll" onmouseover="this.stop()" onmouseout="this.start()">
-				<b>01.dec.23</b> - new featured song &amp; album! working on my 2023 music recap
+				<b>25.dec.23</b> - my <a href="recaps/2023/index.html">2023 recap</a> is out now! ヾ(≧ ▽ ≦)ゝ
 			</marquee>
 		</div>
 
@@ -130,7 +130,7 @@
 		</div>
 
 		<footer>
-			last updated on 01.dec.23
+			last updated on 25.dec.23
 			<br>
 
 			<b>credit:</b> <a href="https://forums.htmlhelp.com/index.php?showtopic=18694" target="_blank">random img JS code</a> used for the "ads" <span class="emoji1"></span>
