--- a/website/music/recaps/index.html
+++ b/website/music/recaps/index.html
@@ -35,13 +35,13 @@
 	<div id="frame">
 
 		<h2>yearly recaps</h2>
-		<p>every year i make a like a music summary with my fav songs &amp; albums released that year, favorite finds, etc.</p>
-		<p><a href="2022.html" target="_parent">2022</a></p>
+		<p>every year i make a like a music summary with my top songs of the year, albums, and more!</p>
+		<p><a href="2023/index.html" target="_parent">2023</a> <span class="emoji2"></span> <a href="2022/index.html" target="_parent">2022</a></p>
 
 	</div>
 
 	<footer>
-		last updated: 19.oct.23 <br>
+		last updated: 25.dec.23 <br>
 		<a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/home">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a>
 	</footer>
 </body>
